tests/ui/parser/imports/non_existant_import.sol
import "doesnotexist"; //~ ERROR: file doesnotexist not found
